# faucet-bot-testnet

./: .env  .gitignore  Cargo.toml  Procfile  README.md  metadata.scale
migrations/: 1010_faucet.sql
src/: main.rs  metadata.rs
src/commands/: claim.rs  mod.rs
src/db/: add.rs  mod.rs
