[package]
name = "faucet-bot-testnet"
version = "0.1.0"
authors = ["Charalampos Mitrodimas <liompis@cherrylabs.org>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
subxt = "0.24.0"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
sp-keyring = "6.0.0"
sp-core = "6.0.0"
chrono = "0.4.19"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
version = "0.10"

